# activity-monitor

./: .env.example  .gitignore  1playground.py  2structures.py  3main-app.py  4controller.py  CHANGELOG.md  Pipfile  README.md  activitylogger.py  credentials-sheets.json  eodArchiver.py  ignoreList.txt  keywordList.txt  main.py  main_app.py  main_app.pyw  pyproject.toml  rename.bat  startup.bat  startup.sh  startuprun.bat  token-drive.pickle  token-sheets.pickle
config/: config.py  keywords.py
dashboard/: README.md  index.html  run.py  script.js  start_server.py
dashboard/backend/: app.py
dashboard/client/: Makefile  app.py  design.md  package.json  tsconfig.json  webpack.config.js
dashboard/client/Public/: components.js  index.html  main.js  style.css  utils.js
dashboard/client/Public/libs/: react.js
dashboard/client/src/: components.tsx  main.tsx  style.scss  types.d.ts  utils.ts
dashboard/client/templates/: dashboard.html  layout.html
dashboard/frontend/: Makefile  index.html  script.js  script.tsx
dashboard/frontend/libs/: react-dom.js
dashboard/frontend/src/: Makefile  components.tsx  main.tsx  script.tsx  tsconfig.json  types.d.ts
docs/: activity-monitor-doc.md  dashboard-doc.md  doc.md  structure  structure.md
scripts/: make_db.py
src/: eodArchiver.py  tracker.py  uploader.py
tests/: test-main.py  test-tracker.py  test-uploader.py
